--- a/.github/workflows/feed.yml
+++ b/.github/workflows/feed.yml
@@ -1,14 +1,17 @@
 name: Publish RSS feeds to GitHub Pages
 
+# RUN MANUALLY WITH ACTIONS > RUN WORKFLOW
 on:
-  push:
-    branches:
-      - main
-  schedule:
-    # Run every day at 0:00 and 12:00 (UTC):
-    - cron:  '00 0,12 * * *'
-
   workflow_dispatch:
+
+# OR RUN EVERY DAY AT 0:00 AND 12:00 (UTC)
+# on:
+#   push:
+#     branches:
+#       - main
+#   schedule:
+#     - cron:  '00 0,12 * * *'
+#   workflow_dispatch:
 
 env:
   CI: true
